# helloworld

./: .gitignore  AGENTS.md  README.md  build_loopback.sh  setup_github.sh  setup_xilinxtools.sh
amd_v80_gen5x8_25.1/: build_all.sh
hbm_simple_xrt/: Makefile  emconfig.json  hbm_simple_xrt  host_descriptor  kernel.xml  krnl_matmul.cfg  krnl_matmul.xml  krnl_vadd.cfg  krnl_vadd.xo  krnl_vadd_desc.cfg  krnl_vadd_desc.xclbin.link_summary  krnl_vadd_desc.xo  krnl_vadd_desc.xo.compile_summary  krnl_vadd_desc_emu.xclbin.link_summary  native_trace.csv  pack_kernel.tcl  pack_krnl_matmul.tcl  package_kernel.tcl  run.sh  run_desc.sh  summary.csv  tensor_test  xrt.ini  xrt.run_summary
hbm_simple_xrt/_x/: v++_compile_krnl_vadd_desc_guidance.pb3  v++_link_krnl_vadd_desc_guidance.pb3
hbm_simple_xrt/_x/link/sys_link/iprepo/xilinx_com_hls_krnl_vadd_desc_1_0/drivers/krnl_vadd_desc_v1_0/src/: CMakeLists.txt  xkrnl_vadd_desc_hw.h
hbm_simple_xrt/documentation/: Makefile.md  READING_ORDER.md  architecture.md  bf16_add.md  bf16_mul.md  fifo4.md  fp32_add.md  fp32_mul.md  kernel_xml.md  krnl_matmul.md  krnl_vadd.md  krnl_vadd_ctrl.md  krnl_vadd_rd_mst.md  krnl_vadd_wr_mst.md  matmul_top.md  mxu.md  package_kernel_tcl.md  pe.md  run_test_sh.md  systolic_array.md  test_krnl_matmul.md  test_matmul_top.md  test_mxu.md  test_systolic_array.md
hbm_simple_xrt/src/: bf16_add.sv  bf16_mul.sv  dma_descriptor.h  fifo4.sv  fp32_add.sv  fp32_mul.sv  host.cpp  host_descriptor.cpp  host_matmul.cpp  host_tensor.cpp  krnl_matmul.sv  krnl_vadd.cpp  (+9 more)
hw/: integrate_loopback.tcl
sw/: test_hbm_loopback.py
(+169 files in other folders)
